--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
                 android:gravity="center"
                 android:text="我是文本"
                 android:textColor="#0aa"
+                android:visibility="gone"
                 android:textSize="15sp" />
 
             <ImageView
