--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,6 +122,12 @@
                     android:text="高度影响阴影透明度" />
             </LinearLayout>
 
+            <CheckBox
+                android:id="@+id/cbMode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="阴影模式(线性)" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
