#V1.5.2 修改 TODO整体偏移效果修改，bug修复

--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -5,10 +5,10 @@
     android:layout_height="wrap_content"
     app:shadowFluidShape="adsorption"
     android:paddingTop="10dp"
-    app:cornerRadius="30dp"
+    app:cornerRadius="10dp"
     app:shadowColor="#000"
     app:shadowStartAlpha="100"
-    app:cardBackgroundColor="#f00">
+    app:cardBackgroundColor="#ffffff">
 
 
     <LinearLayout
